--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.2",
+    "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
