--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.3",
