--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "node-fetch": "^2.6.6",
+    "pug": "^3.0.2",
+    "upgrade": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
