--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "node-fetch": "^2.6.6",
     "pug": "^3.0.2",
     "upgrade": "^1.1.0"
