--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.4",
     "node-fetch": "^2.6.6",
     "pug": "^3.0.2",
+    "regenerator-runtime": "^0.13.9",
     "upgrade": "^1.1.0"
   },
   "devDependencies": {
