--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ffmpeg/core": "^0.8.5",
     "@ffmpeg/ffmpeg": "^0.9.7",
+    "aws-sdk": "^2.1110.0",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.4.1",
     "dotenv": "^16.0.0",
@@ -24,6 +25,7 @@
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "node-fetch": "^2.6.6",
     "pug": "^3.0.2",
     "regenerator-runtime": "^0.13.9",
