--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "16.14.0",
+    "npm": "6.14.15"
+  },
   "scripts": {
     "start": "node build/init.js",
     "build": "npm run build:server && npm run build:assets",
